# Open-Yolo

./: .SRCINFO  .clang-format  .clang-tidy  .cppcheck  .dockerignore  .flake8  .gitignore  .gitignore.old  .pre-commit-config.yaml  AUDIT_REPORT.md  AUTOMATION_COMPLETE.md  AUTO_RELEASE_GUIDE.md  BUILD.md  CHANGELOG.md  CHECK_PACKAGES.ps1  CI_CD_COMPLETE.md  CMakeLists.txt  CMakeLists.txt.new  CMakeLists.txt.old  CMakePresets.json  COMPILATION.md  COMPILATION_FIXES.md  DEVOPS_SUMMARY.md  Dockerfile  Dockerfile.build  Dockerfile.format  Dockerfile.old  Dockerfile.old2  Dockerfile.release  Dockerfile.release-simple  Dockerfile.xvfb  FINALISATION_COMPLETE.md  FINALIZE_RELEASE.ps1  GITHUB_AUTO_PUBLISH.md  GITHUB_RELEASE_v1.0.0.md  LICENSE  Liste des tâches Gestionnaire.md  NIXOS_SUPPORT.md  PKGBUILD  PROGRESS_CI_CD.md  (+43 more)
.github/workflows/: build.yml  ci.yml  linux-build.yml
assets/cursors/: README.md
cmake/: config.h.in  open-yolo-session.in  open-yolo.pc.in  uninstall.cmake.in
config/: Config.hpp.in
data/: default-config.ini  default_shortcuts.json  open-yolo.desktop.in  org.openyolo.gschema.xml
data/applications/: open-yolo-wm.desktop
data/config/: wm-config.ini
data/xsessions/: open-yolo.desktop
docker/: Dockerfile.archlinux  Dockerfile.cachyos  Dockerfile.fedora  Dockerfile.nixos  Dockerfile.ubuntu22  Dockerfile.ubuntu24  Dockerfile.windows-wsl
docs/: CURSOR_MANAGER.md  PROFILE_STRUCTURE.md  SHORTCUTS.md
examples/: CMakeLists.txt  cursor_example.cpp  profile_example.cpp
include/: Image.hpp  config.h  config.h.in  screen.h  version.h.in
include/config/: ConfigManager.hpp
include/cursormanager/: CursorManager.hpp  ShaderProgram.hpp
include/displaymanager/: DisplayManager.hpp
include/gui/: MainWindow.hpp
include/input/: CursorError.hpp  ErrorCodes.hpp  InputBackend.hpp  InputManager.hpp  KeyCodes.hpp  ShortcutConfig.hpp  ShortcutManager.hpp  WaylandBackend.hpp
include/input/backends/: WaylandBackend.hpp  X11Backend.hpp
include/log/: Logger.hpp
include/openyolo/: AppCore.hpp
include/openyolo/error/: ErrorCodes.hpp  Exception.hpp
minimal_build/: CMakeLists.txt  Logger.cpp  Logger.hpp  ProfileManager.cpp  ProfileManager.hpp  ThemeManager.cpp  ThemeManager.hpp  main_minimal.cpp  open-yolo-minimal
resources/: OpenYolo.desktop  OpenYolo.desktop.in  OpenYolo.metainfo.xml.in  config.json  open-yolo.desktop
resources/config/: default-config.yaml
resources/cursors/: README.md
scripts/: auto-release.ps1  auto-release.sh  auto-screenshots.sh  benchmark-performance.sh  build-cachyos.sh  build-deb.sh  build-package.sh  build-packages.sh  build.sh  build.sh.old  bump-version.sh  clean.sh  create-release.ps1  create-release.sh  create-screenshots.sh  entrypoint.sh  exec.sh  format.sh  format.sh.old  generate-all-packages.ps1  generate-all-packages.sh  generate-default-cursors.py  generate-packages-docker.ps1  generate-packages-docker.sh  generate-validation-report.ps1  generate_all_icons.sh  generate_cursor.py  generate_icons.py  healthcheck.sh  open-yolo.service  pre-release-check.sh  publish-github-release.sh  publish-release-v1.0.0.ps1  publish-release-wsl.sh  publish-simple.sh  quick-release.ps1  quick-test.sh  run-format.sh  run-tests.sh  setup-dev.sh  (+11 more)
src/: CMakeLists.txt  CMakeLists.txt.old  display.h  gui.cpp  gui.h  main.cpp  main_globals.cpp  main_simple.cpp
src/config/: CMakeLists.txt  CMakeLists.txt.old  Config.hpp.in  ConfigManager.cpp
src/cursormanader/shaders/: glow_fs.glsl  shadow_fs.glsl
src/cursormanager/: CMakeLists.txt  CMakeLists.txt.old  CursorManager.cpp  ShaderProgram.cpp  ShaderProgram.hpp
src/cursormanager/shaders/: glow_fs.glsl  shadow_fs.glsl
src/displaymanager/: CMakeLists.txt  CMakeLists.txt.old  DisplayManager.cpp  display.cpp
src/error/: ErrorCodes.cpp  Exception.cpp
src/gui/: CMakeLists.txt  CMakeLists.txt.old  MainWindow.cpp  MainWindow.hpp
src/input/: CMakeLists.txt  CMakeLists.txt.old  InputBackend.hpp  InputManager.cpp  InputManager.h  InputManager.hpp  ShortcutConfig.cpp  ShortcutManager.cpp  WaylandBackend.cpp  WaylandBackend.hpp  X11Backend.cpp
src/input/backends/: WaylandBackend.cpp  WaylandBackend.hpp  X11Backend.cpp
src/input/wayland/: input-inhibit-unstable-v1-client-protocol.h
src/log/: CMakeLists.txt  CMakeLists.txt.old  Logger.cpp
src/openyolo/: AppCore.cpp
src/ui/: CMakeLists.txt  CursorWindow.cpp  CursorWindow.hpp
tests/: CMakeLists.txt  TestCursorManager.cpp  test_cursor.cpp  test_cursormanager.cpp  test_gui.cpp  test_profile_manager.cpp  test_theme_manager.cpp  test_wayland_backend.cpp  test_wayland_shortcuts.cpp
